# openbull

./: .env.example  .gitignore  README.md  alembic.ini  migrate_all.py  pyproject.toml  sandbox_e2e_test.py
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 20260427_sandbox_position_margin.py  20260429_strategies.py  20260513_signal_mode.py
backend/: config.py  database.py  dependencies.py  exceptions.py  limiter.py  main.py  middleware.py  middleware_api_log.py  security.py
backend/api/: __init__.py  analyzer.py  basket_order.py  depth.py  expiry.py  funds.py  gex.py  history.py  holdings.py  intervals.py  ivchart.py  ivsmile.py  margin.py  maxpain.py  multiquotes.py  oitracker.py  openposition.py  optionchain.py  optiongreeks.py  optionsmultiorder.py  optionsorder.py  optionsymbol.py  orderbook.py  orderstatus.py  ping.py  place_order.py  positions.py  quotes.py  search.py  split_order.py  straddle.py  symbol.py  syntheticfuture.py  tradebook.py  volsurface.py
backend/broker/: base.py
backend/events/: __init__.py  strategy_events.py
backend/models/: __init__.py  audit.py  auth.py  broker_config.py  sandbox.py  settings.py  strategies.py  strategy_module.py  symbol.py  user.py
backend/routers/: api_key.py  api_logs.py  auth.py  broker_config.py  broker_oauth.py  dashboard.py  error_logs.py  holdings.py  orderbook.py  playground.py  positions.py  sandbox.py  strategies.py  strategy_module.py  strategy_webhook.py  strategybuilder.py  symbols.py  tradebook.py  trading_mode.py  websocket.py
backend/sandbox/: __init__.py  _db.py  _session.py  catch_up.py  config.py  daily_reset.py  defaults.py  execution_engine.py  fund_manager.py  holdings_manager.py  mtm_updater.py  order_manager.py  order_validation.py  pnl_snapshot.py  position_manager.py  quote_helper.py  scheduler.py  squareoff.py  symbol_info.py  t1_settle.py  weekly_reset.py
backend/schemas/: account.py  api_key.py  auth.py  broker.py  order.py  strategies.py  strategy_module.py
backend/strategy/: engine.py  (+19 more)
docs/: CHANGELOG.md  PRODUCT.md  README.md  TUTORIAL.md
frontend/: package-lock.json  package.json  vite.config.ts
install/: install.sh  perftuning.sh  update.sh
test/: test_ws_depth.py  test_ws_ltp.py  test_ws_quote.py
(+346 files in other folders)
