[project]
name = "openbull"
version = "0.1.0"
description = "Options Trading Platform for Indian Brokers"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "argon2-cffi>=23.1.0",
    "cryptography>=44.0.0",
    "httpx>=0.28.0",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.27",
    # Mako is a transitive dep via alembic. Pinned at the top level to
    # force 1.3.12+ which patches CVE-2025 (path traversal via double-
    # slash / backslash URI prefix in TemplateLookup). We don't use
    # TemplateLookup but Dependabot flags any vulnerable version on the
    # tree, so bumping closes the alerts.
    "mako>=1.3.12",
    "python-dotenv>=1.0.1",
    "cachetools>=5.5.0",
    "pandas>=2.2.0",
    # opengreeks: Rust Black-76 (py_vollib-compatible signatures, NumPy-only dep)
    # powers option Greeks/IV. option_greeks_service falls back to a built-in
    # pure-math Black-76 if this is not installed, so it is effectively optional.
    "opengreeks>=0.1.0",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.3.3",
    "pyzmq>=27.1.0",
    "websockets>=16.0",
    "protobuf>=7.34.1",
    "websocket-client>=1.9.0",
    "tornado>=6.5.5",
    "redis>=5.0",
    "limits[redis]>=3.0",
    "apscheduler>=3.10",
]
